--- a/templates/home.html
+++ b/templates/home.html
@@ -1,30 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+    Diet Master
+{% endblock %}
+
 {% block content %}
-
-<module-one>
-    <center>
-    <div>
-        <h3 style="text-align:center;color:#f10180">用户注册</h3>
-      <hr>
-    </div>
-    <div style="margin:100px">
-          <form>
-              <p>
-                  <input type="text" placeholder="用户名">
-              </p>
-              <p>
-                  <input type="password" placeholder="密码">
-              </p>
-              <p>
-                  <input type="checkbox" required="required">我已阅读注册手册
-              </p>
-              <input type="button" value="注册">
-            </form>
-    </div>
-</center>
-
-</module-one>
-
-
+    {# TODO: cover page #}
 {% endblock content %}
