--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,9 @@
 <!-- As a heading -->
 <nav class="navbar navbar-light bg-light">
-    <span class="navbar-brand mb-0 h1">Navbar</span>
+    <a class="navbar-brand mb-0 h1">Diet Master</a>
+
+    <nav class="nav nav-masthead justify-content-center">
+        <a class="nav-link active" href="#">Home</a>
+        <a class="nav-link btn" href="#">Login</a>
+    </nav>
 </nav>
