--- a/templates/home.html
+++ b/templates/home.html
@@ -5,5 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    {# TODO: cover page #}
+    {# TODO: create a cover page #}
+    {# TODO: https://getbootstrap.com/docs/4.4/examples/cover/ #}
+    {# Assignee: Wang Haohui #}
 {% endblock content %}
