revise boarder-color to border-color

--- a/static/css/sign_in.css
+++ b/static/css/sign_in.css
@@ -19,7 +19,7 @@
 .submit_button {
 	color:#fff;
 	vertical-align:middle;
-	boarder-color:#007bff;
+	border-color:#007bff;
 	border-radius:5px;
 	background-color:#007bff;
 	text-align:center;
