--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}
-    Home
+    Diet Master
 {% endblock %}
 {% block content %}
 <html lang="en">
