--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="/static/css/home.css">
     
         <title>
-        Home
+        Diet Master
     </title>
       </head>
 
