--- a/templates/dashboard/survey.html
+++ b/templates/dashboard/survey.html
@@ -4,6 +4,7 @@
 {% block content%}
     {# TODO: create a survey #}
     {# Assignee: Zhang Hao #}
+    {# template: https://getbootstrap.com/docs/4.4/examples/checkout/ #}
 
     <div class="container">
 
