--- a/templates/home.html
+++ b/templates/home.html
@@ -8,27 +8,24 @@
     <head>
         <!-- Required meta tags -->
         <meta charset="utf-8">
-        
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
         <link rel="stylesheet" href="/static/css/home.css">
-    
+        
         <title>
         Diet Master
     </title>
       </head>
 
     <body class="home_component">
-
         <div class="background_div">
         <div class="content" >
              <center>
                 <img src="{% static '/img/WKU.png' %}" width= "80" height="80">
-                <div style="height:20px;"></div>
                 <h3 class="home_subtitle">Diet Master</h3>
                 <div style="height:20px;"></div>
-                <button class="submit_button" type="submit">Start</button>
+                <button class="start_button" type="start">Start</button>
             </center>
         </div>
 
