--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,25 +1,29 @@
 .home_subtitle {
 	margin-top:20px;
 }
-.start_button {
-	color:#fff;
-	vertical-align:middle;
-	border-color:#007bff;
-	border-radius:5px;
-	background-color:#007bff;
-	text-align:center;
-	width:300px;
-	height:48px;
+/*.start_button {*/
+/*	color:#fff;*/
+/*	vertical-align:middle;*/
+/*	border-color:#007bff;*/
+/*	border-radius:5px;*/
+/*	background-color:#007bff;*/
+/*	text-align:center;*/
+/*	width:300px;*/
+/*	height:48px;*/
+/*}*/
+.cover-container {
+	width: 100%;
+	max-width: 42em;
+	padding: 15px;
+	margin: auto;
 }
-center {
-	padding:30px;
+/*
+ * Cover
+ */
+.cover {
+	padding: 0 1.5rem;
 }
-.background_div {
-	background:url('/static/img/diet_background.jpg')no-repeat;
-	background-size:cover;
-	height:550px;
-}
-.content {
-	height:550px;
-	background:rgba(255,255,255,0.5);
+.cover .btn-lg {
+	padding: .75rem 1.25rem;
+	font-weight: 700;
 }
