Create a recommend.html page to display the recommended foods
- todo: one card slide in each time

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,9 +20,9 @@ body {
     width: 15rem;
 }
 
-#page-content-wrapper {
-    min-width: 100vw;
-}
+/*#page-content-wrapper {*/
+/*    min-width: 100vw;*/
+/*}*/
 
 #wrapper.toggled #sidebar-wrapper {
     margin-left: 0;
@@ -33,10 +33,10 @@ body {
         margin-left: 0;
     }
 
-    #page-content-wrapper {
-        min-width: 0;
-        width: 100%;
-    }
+    /*#page-content-wrapper {*/
+    /*    min-width: 0;*/
+    /*    width: 100%;*/
+    /*}*/
 
     #wrapper.toggled #sidebar-wrapper {
         margin-left: -15rem;
