--- a/templates/dashboard/sidebar.html
+++ b/templates/dashboard/sidebar.html
@@ -2,8 +2,8 @@
 <div class="bg-light border-right" id="sidebar-wrapper">
     <div class="sidebar-heading">Diet Master </div>
     <div class="list-group list-group-flush">
-        <a href="#" class="list-group-item list-group-item-action bg-light">Food</a>
-        <a href="profile" class="list-group-item list-group-item-action bg-light">Profile</a>
+        <a href="{% url 'recommendation' %}" class="list-group-item list-group-item-action bg-light">Food</a>
+        <a href="{% url 'profile' %}" class="list-group-item list-group-item-action bg-light">Profile</a>
 
     </div>
 </div>
