--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
     <a class="navbar-brand mb-0 h1">Diet Master</a>
 
     <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="#">Home</a>
-        <a class="nav-link btn" href="#">Login</a>
+        <a class="nav-link active" href="{% url 'home' %}">Home</a>
+        <a class="nav-link btn" href="{% url 'login' %}">Login</a>
     </nav>
 </nav>
