create register page with some bugs....

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,9 +1,9 @@
 <!-- As a heading -->
 <nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand mb-0 h1">Diet Master</a>
+    <a class="navbar-brand mb-0 h1" style="color:#000000;">Diet Master</a>
 
     <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="{% url 'home' %}">Home</a>
-        <a class="nav-link btn" href="{% url 'login' %}">Login</a>
+        <a class="nav-link active" href="{% url 'home' %}" style="color:#000000;">Home</a>
+        <a class="nav-link btn" href="{% url 'login' %}" style="color:#000000;">Login</a>
     </nav>
 </nav>
