--- a/static/css/sign_in.css
+++ b/static/css/sign_in.css
@@ -1,43 +1,59 @@
 .sign_in_subtitle {
-	margin-top:20px;
+	margin-top: 20px;
 }
+
 .account_format {
-	margin-bottom:10px;
+	margin-bottom: 10px;
 }
+
 .account_control {
-	padding:10px;
-	width:300px;
-	height:46px;
-	border-radius:5px;
+	padding: 10px;
+	width: 300px;
+	height: 46px;
+	border-radius: 5px;
 }
+
 .account_format {
-	margin-top:25px;
+	margin-top: 25px;
 }
+
 .checkbox {
-	margin-bottom:20px;
+	margin-bottom: 20px;
 }
+
 .submit_button {
-	color:#fff;
-	vertical-align:middle;
-	border-color:#007bff;
-	border-radius:5px;
-	background-color:#007bff;
-	text-align:center;
-	width:300px;
-	height:48px;
+	color: #fff;
+	vertical-align: middle;
+	border-color: #007bff;
+	border-radius: 5px;
+	background-color: #007bff;
+	text-align: center;
+	width: 300px;
+	height: 48px;
 }
+
 .version_no {
-	margin-top:30px;
+	margin-top: 30px;
 }
+
 center {
-	padding:30px;
+	padding: 30px;
 }
-.background_div {
-	background:url('/static/img/diet_background.jpg')no-repeat;
-	background-size:cover;
-	height:550px;
+
+* {
+	margin: 0;
+	padding: 0;
 }
-.content {
-	height:550px;
-	background:rgba(255,255,255,0.5);
+
+#signUp_information {
+	margin-left: 250px;
+	float: left;
+	margin-right: 150px;
 }
+
+#notation {
+	float: left;
+	padding-top: 30px;
+}
+
+
