--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,9 +1,12 @@
 <!-- As a heading -->
 <nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand mb-0 h1" style="color:#000000;">Diet Master</a>
+  <a class="navbar-brand mb-0 h1" style="color:#000000;">Diet Master</a>
 
-    <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="{% url 'home' %}" style="color:#000000;">Home</a>
-        <a class="nav-link btn" href="{% url 'login' %}" style="color:#000000;">Login</a>
-    </nav>
+  <nav class="nav nav-masthead justify-content-center">
+    <a class="nav-link active" href="{% url 'home' %}" style="color:#000000;">Home</a>
+    <a class="nav-link btn" href="{% url 'login' %}" style="color:#000000;">Login</a>
+    <a class="nav-link btn" href="{% url 'register' %}" style="color:#000000;">Register</a>
+    <a class="nav-link" href="" style="color:#000000;">Logout</a>
+    <a class="nav-link avatar avatar-32 rounded-circle bg-secondary img-fluid" href="{% url 'recommendation' %}">B</a>
+  </nav>
 </nav>
