--- a/static/css/style.default.css
+++ b/static/css/style.default.css
@@ -2047,7 +2047,7 @@ STYLE SWITCHER FOR DEMO
   padding-top: 0.3125rem;
   padding-bottom: 0.3125rem;
   margin-right: 1rem;
-  font-size: 1.25rem;
+  font-size: 20 px; /*1.25rem;*/
 }
 
 .navbar-toggler {
