--- a/templates/login.html
+++ b/templates/login.html
@@ -7,35 +7,144 @@ Login
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="{% static 'css/sign_in.css' %}">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="robots" content="all,follow">
+<!--  <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/4.2.1/css/bootstrap.min.css">-->
+  <link rel="stylesheet" href="{% static 'css/style.default.css' %}" id="theme-stylesheet">
+  <!--<link rel="stylesheet" href="{% static 'css/sign_in.css' %}">-->
 </head>
 
-<body class="sign_in_component">
-
-<div class="background_div ">
-  <div >
-    <center>
-      <img src="{% static '/img/WKU.png' %}" width="80" height="80">
-      <h3 class="sign_in_subtitle">Please Login </h3>
-      <!--用户名密码-->
-      <div class="account_format">
-        <input type="email" id="inputEmail" class="account_control" placeholder="Email Address" required autofocus>
-        <br/>
-        <input type="password" id="inputPassword" class="account_control" placeholder="Password" required>
+<body>
+<div class="page login-page">
+  <div class="container d-flex align-items-center">
+    <div class="form-holder has-shadow">
+      <div class="row">
+        <!-- Logo & Information Panel-->
+        <div class="col-lg-6">
+          <div class="info d-flex align-items-center">
+            <div class="content">
+              <div class="logo"
+                   style="margin:auto; position:absolute;left:50%;top:50%;margin-left: -150px;margin-top:-100px;">
+                <center>
+                  <h1>Welcome</h1>
+                  <h1>To</h1>
+                  <h1>Diet Master</h1>
+                </center>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--Form Panel-->
+        <div class="col-lg-6 bg-white">
+          <div class="form d-flex align-items-center">
+            <div class="content">
+              <form method="post" action="https://www.baidu.com" class="form-validate" id="loginFrom">
+                <div class="form-group">
+                  <input id="login-username" type="text" name="userName" required data-msg="Please enter username"
+                         placeholder="Username" class="input-material">
+                </div>
+                <div class="form-group">
+                  <input type="password" id="login-password" name="passWord" required data-msg="Please enter password"
+                         placeholder="Password" class="input-material">
+                </div>
+                <button id="login" type="submit" class="btn btn-primary">Login</button>
+                <div style="margin-top:-40px;">
+                  <!--自动登录-->
+                  <div class="custom-control custom-checkbox" style="float:right">
+                    <input type="checkbox" class="custom-control-input" id="check2">
+                    <label class="custom-control-label" for="check2">Login Automatically</label>
+                  </div>
+                  <!--记住密码-->
+                  <div class="custom-control custom-checkbox" style="float:right;">
+                    <input type="checkbox" class="custom-control-input" id="check1">
+                    <label class="custom-control-label" for="check1">Remember&nbsp;&nbsp;&nbsp;</label>
+                  </div>
+                </div>
+              </form>
+              <br/>
+              <small>No account?</small>
+              <a href="{% url 'register' %}" class="signup">&nbsp;Register</a>
+            </div>
+          </div>
+        </div>
       </div>
-      <!--这里可以选保持账户信息状态-->
-      <div class="checkbox">
-        <label>
-          <input type="checkbox" value="remember_me"> Remember Me
-        </label>
-      </div>
-      <button class="submit_button" type="submit">Sign in</button>
-      <p class="version_no">© 2020</p>
-    </center>
+    </div>
   </div>
-
 </div>
+<!-- JavaScript files-->
+<script src="https://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
+<script src="https://ajax.aspnetcdn.com/ajax/bootstrap/4.2.1/bootstrap.min.js"></script>
+<script src="{% static 'vendor/jquery-validation/jquery.validate.min.js' %}"></script><!--表单验证-->
+<!-- Main File-->
+<script src="{% static 'js/front.js' %}"></script>
+<script>
+  $(function()
+  {
+  /*判断上次是否勾选记住密码和自动登录*/
+  var check1s = localStorage.getItem("check1");
+  var check2s = localStorage.getItem("check2");
+  var oldName = localStorage.getItem("userName");
+  var oldPass = localStorage.getItem("passWord");
+     if(check1s=="true")
+    {
+      $("#login-username").val(oldName);
+      $("#login-password").val(oldPass);
+      $("#check1").prop('checked',true);//.prop('checked',true)设置元素属性checked为true，即被选中。
+    }
+    else
+    {
+      $("#login-username").val('');
+      $("#login-password").val('');
+      $("#check1").prop('checked',false);
+    }
+    if(check2s=="true")
+    {
+      $("#check2").prop('checked',true);
+      $("#loginForm").submit();
+    }
+    else
+    {
+      $("#check2").prop('checked',false);
+    }
+    /*拿到刚刚注册的账号*/
+    		/*if(localStorage.getItem("name")!=null){
+    			$("#login-username").val(localStorage.getItem("name"));
+    		}*/
+   /*登录*/
+   	$("#login").click(function()
+   	 {
+				var userName= $("#login-username").val();
+				var passWord = $("#login-password").val();
+				/*获取当前输入的账号密码*/
+				localStorage.setItem("userName",userName)
+				localStorage.setItem("passWord",passWord)
+				/*获取记住密码  自动登录的 checkbox的值*/
+				var check1 = $("#check1").prop('checked');
+				var check2 = $("check2").prop('checked');
+				localStorage.setItem("check1",check1);
+				localStorage.setItem("check2",check2);
+     })
+      /*$("#check2").click(function(){
+        var flag=$('#check2').prop('checked');
+        if(flag){
+          var userName=$("#login-username").val();
+          var passWord=$("#login-password").val();
+          $.ajax({
+            type:"post",
+            url:"http://localhost:8080/powers/pow/regUsers",
+            data:{"userName":userName,"passWord":passWord},
+            async:true,
+            success:function(res){
+              alert(res);
+            }
+          });
+        }
+      })*/
+  })
 
+</script>
 </body>
 
 </html>
