--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,7 +5,7 @@
   <nav class="nav nav-masthead justify-content-center">
     <a class="nav-link active" href="{% url 'home' %}" style="color:#000000;">Home</a>
     {% if request.user.is_authenticated %}
-      <a class="nav-link" href="" style="color:#000000;">Logout</a>
+      <a class="nav-link" href="{% url 'logout' %}" style="color:#000000;">Logout</a>
       <a class="nav-link avatar avatar-32 rounded-circle bg-secondary img-fluid" href="{% url 'recommendation' %}">B</a>
     {% else %}
       <a class="nav-link btn" href="{% url 'login' %}" style="color:#000000;">Login</a>
