--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,7 +9,7 @@
       <a class="nav-link avatar avatar-32 rounded-circle bg-secondary img-fluid" href="{% url 'recommendation' %}">B</a>
     {% else %}
       <a class="nav-link btn" href="{% url 'login' %}" style="color:#000000;">Login</a>
-      <a class="nav-link btn" href="{% url 'register' %}" style="color:#000000;">Register</a>
+      <a class="nav-link btn bg-primary " href="{% url 'register' %}" style="color:#fff;">Register</a>
     {% endif %}
 {#    <a class="nav-link" href="" style="color:#000000;">Logout</a>#}
 {#    <a class="nav-link avatar avatar-32 rounded-circle bg-secondary img-fluid" href="{% url 'recommendation' %}">B</a>#}
